User-visible changes in version 0.7.0  (2006-02-08):
* program can be compiled with unicode-enabled wxWidgets
* GUI: more configurable axes (eg. a reversed x axis option)
  and peak labels (eg. horizontal/vertical labels)

User-visible changes in version 0.7.0pre1  (2006-01-23):
* ###########################################################################
  #                      completely changed syntax                          #
  ###########################################################################
* GUI: dataset/function/variable lists at right-hand panel
* new built-in functions: split-Gaussian (a.k.a Bifurcated Gaussian) and others
* there where many other changes not listed here. More then half of the
  code was either written from scratch or refactored.
* some features available in previous version are temporarily disabled,
  most notably:  
     powder diffraction part - c.xxx commands
     parameters history

User-visible changes in version 0.5.1 (2005-07-21):
* new toolbar icons 
* data tranformations: treat "3 < x < 4" like "3 < x and x < 4"
* GUI data viewer - "Fit Zoom" button 


User-visible changes in version 0.5.0 (2005-06-09):
* d.load -- possibility of loading of only selected points from file 
            was removed (it can be done with d.tranform after loading)
            new option: adding data points from file to currently loaded data 
* d.transform  --  new quite powerful command for transforming data, 
  Commands d.deviation, d.range, d.background, d.calibrate, d.set were removed.
  Handling of background (and calibration) is now a little different.
* added Data Editor dialog and Data->Fast DT menu. 

User-visible changes in version 0.4.4 (2005-03-04):

* fixed Pseudo-Voigt formula in manual (program was not changed) (David Hovis)
* peak labels (above each peak) that can display peak area, position etc.
* fonts used for scale labels can be changed 
* data viewer (it is first step in implementing data editor)